--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,32 @@
     tools:context=".MainActivity"
     android:background="@color/black">
 
-
-    <TextView
-        android:id="@+id/tvResult"
+    <HorizontalScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:hint=""
-        android:textColorHint="@color/white"
-        android:text="0"
-        android:textColor="@color/white"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textSize="60sp"
-        android:gravity="center|end"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tvResult"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:hint=""
+            android:scrollHorizontally="true"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="60sp" />
+
+    </HorizontalScrollView>
+
 
     <TableLayout
         android:id="@+id/tableLayout"
