--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 android:layout_marginRight="2.5dp"
                 android:layout_marginBottom="2.5dp"
                 android:layout_weight="1"
-                android:background="@color/dark_grey"
+                android:background="@drawable/animated_rectangle_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="CLR"
@@ -73,7 +73,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="2.5dp"
                 android:layout_weight="1"
-                android:background="@color/dark_grey"
+                android:background="@drawable/animated_rectangle_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="⌫ "
@@ -91,9 +91,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="7"
@@ -103,9 +104,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="8"
@@ -115,9 +117,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="9"
@@ -127,9 +130,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickOperator"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="÷"
@@ -147,9 +151,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="4"
@@ -159,9 +164,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="5"
@@ -171,9 +177,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="6"
@@ -183,9 +190,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickOperator"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="×"
@@ -203,9 +211,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="1"
@@ -215,9 +224,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="2"
@@ -227,9 +237,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="3"
@@ -239,9 +250,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickOperator"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="-"
@@ -259,9 +271,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickDecimal"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="."
@@ -271,9 +284,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickNumber"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="0"
@@ -283,9 +297,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickEquals"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="="
@@ -295,9 +310,10 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:onClick="clickOperator"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_baseline_circle_24"
+                android:layout_margin="5dp"
+                android:background="@drawable/animated_round_button_drawable"
                 android:fontFamily="sans-serif-smallcaps"
                 android:gravity="center"
                 android:text="+"
